--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230602000601">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230602005644">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -243,6 +243,36 @@
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__top top-footer">
+					<div class="top-footer__info">
+						<div class="top-footer__location">
+							Kyiv, Mechnikova str, 14/1
+						</div>
+						<i></i>
+						<a class="top-footer__map">
+							On map
+						</a>
+					</div>
+					<div class="top-footer__dop">
+						© 2021 HLEGAL Law company, LLC
+					</div>
+				</div>
+				<div class="footer__bottom">
+					<a href="" class="footer__bottom-img">
+						<img src="img/facebook2big.svg" alt="">
+					</a>
+					<i></i>
+					<a href="" class="footer__bottom-phone">
+						0800 211 927
+					</a>
+					<i></i>
+					<a href="" class="footer__bottom-contact">
+						contact@forstudy.space
+					</a>
+				</div>
+				<div class="top-footer__dop2">
+					© 2021 HLEGAL Law company, LLC
+				</div>
 			</div>
 		</footer>
 	</div>
@@ -256,7 +286,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20230602000601"></script>
+	<script src="js/app.min.js?_v=20230602005644"></script>
 </body>
 
 </html>
